[package]
name = "rprime"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "Provides useful functions for prime numbers."
homepage = "https://github.com/iamtheblackunicorn/rprime"
repository = "https://github.com/iamtheblackunicorn/rprime"
documentation = "https://github.com/iamtheblackunicorn/rprime"
readme = "README.markdown"
keywords = ["science", "maths"]
categories = ["command-line-utilities", "science", "maths"]
exclude = ["/.github"]
